# ChangeLog for app-admin/rex
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/rex/ChangeLog,v 1.19 2014/08/10 01:37:41 patrick Exp $

  10 Aug 2014; Patrick Lauer <patrick@gentoo.org> rex-0.45.1.ebuild,
  rex-0.46.ebuild:
  Fix description for more repoman happy

*rex-0.46 (07 May 2014)

  07 May 2014; Patrick Lauer <patrick@gentoo.org> +rex-0.46.ebuild,
  -rex-0.41.2.ebuild, -rex-0.41.3.ebuild, -rex-0.42.4.ebuild,
  -rex-0.43.7.ebuild, -rex-0.44.1.ebuild, -rex-0.44.6.ebuild:
  Bump, clean out old

*rex-0.45.1 (24 Apr 2014)

  24 Apr 2014; Patrick Lauer <patrick@gentoo.org> +rex-0.45.1.ebuild:
  Bump

*rex-0.44.6 (10 Mar 2014)

  10 Mar 2014; Patrick Lauer <patrick@gentoo.org> +rex-0.44.6.ebuild:
  Bump

*rex-0.44.1 (28 Feb 2014)

  28 Feb 2014; Patrick Lauer <patrick@gentoo.org> +rex-0.44.1.ebuild:
  Bump

*rex-0.43.7 (08 Oct 2013)

  08 Oct 2013; Patrick Lauer <patrick@gentoo.org> +rex-0.43.7.ebuild:
  Bump

*rex-0.42.4 (06 Sep 2013)

  06 Sep 2013; Patrick Lauer <patrick@gentoo.org> +rex-0.42.4.ebuild:
  Bump

*rex-0.41.3 (07 May 2013)

  07 May 2013; Patrick Lauer <patrick@gentoo.org> +rex-0.41.3.ebuild,
  -rex-0.40.2.ebuild, -rex-0.41.0.ebuild, -rex-0.41.1.ebuild:
  Bump

*rex-0.41.2 (20 Apr 2013)

  20 Apr 2013; Patrick Lauer <patrick@gentoo.org> +rex-0.41.2.ebuild:
  Bump

*rex-0.41.1 (15 Apr 2013)

  15 Apr 2013; Patrick Lauer <patrick@gentoo.org> +rex-0.41.1.ebuild,
  -rex-0.38.0.ebuild:
  Bump

*rex-0.41.0 (02 Apr 2013)

  02 Apr 2013; Patrick Lauer <patrick@gentoo.org> +rex-0.41.0.ebuild:
  Bump

*rex-0.40.2 (06 Mar 2013)

  06 Mar 2013; Patrick Lauer <patrick@gentoo.org> +rex-0.40.2.ebuild,
  -rex-0.37.0.ebuild, -rex-0.37.1.ebuild, -rex-0.39.0.ebuild,
  -rex-0.40.0.ebuild, -rex-0.40.1.ebuild:
  Bump

*rex-0.40.1 (28 Feb 2013)

  28 Feb 2013; Patrick Lauer <patrick@gentoo.org> +rex-0.40.1.ebuild:
  Bump

*rex-0.40.0 (25 Feb 2013)
