@@ -1,6 +1,8 @@
 DIST 0.46.tar.gz 211917 SHA256 dbfe47d0b721b8a0c2b47fae6766fb03a62bbbd26f99d082c004074f0d28ed2f SHA512 1f8869d81d6237a72d22eb0e801cbe7ce59fccfc5cd730f58f9b5d0736bec85458cebf8b0e115719f8c7ac326c06b54465be9d23b8b3e1db9e0d11dbb79e2f90 WHIRLPOOL be4481fa15a90ae8c8adbf396d7d352e651c35efee727cd4546944378509d890af8654c3bd52e9dfd3f32cd6bab8b3651bea32cdaca37b149151da56b4a50330
+DIST 0.51.2.tar.gz 219822 SHA256 280a5b6b38042c34df2409fb1a54dd231cc2820818854d774aec8363b16117d7 SHA512 61aafce363ef26c8ce0c218fa2722cb52614d73481bb10719526d127a3b87116483aabd4761452cb1181f8e76e5d19b05a727132f71c99d827b003d07b42733a WHIRLPOOL 5f0b5b1d8f86a499ad93730e4af846b340e556e09904dd0a45bf98eeeb727c277071fc4edf2b2174bcd55f2c80766636d175f1f8498afcac6a1085fe5ca726e8
 DIST Rex-0.45.1.tar.gz 196657 SHA256 0183ac7c201c00e1b54fc135daa35ee32ad4712491b15700c2fc1f35f87c7c5c SHA512 ede66c3373b6b8d03dd5ac3b25a31797d9e32117678a5211bf0e9c0a72697b97414ebb077220a1f8a4a3f2feff6652ea532cbe03ded06cb3f295eb03985e5695 WHIRLPOOL 8c595f2ff5e015b6d7c969497b8824a9bbf0ae0143c447c558c84daf42f534514cd0c254682ffa68f975dd84e149cd38df206688cd0ea31ff3bf832cb70da171
 EBUILD rex-0.45.1.ebuild 700 SHA256 3d27626e758690445d350c7970130781f8cb7c9e168a496a7f2255d7560599f3 SHA512 2c85e733027b66963bc765671ea93e5e724891a2de49ac49edd45f32eec8c0bcefa1d6af9f7435a335ed38c5007b27932e1161d9bc48125ada2c7ced1cd2c6ab WHIRLPOOL 63d4f7baed4f3f1f513c97acad10fca4663fcdadaf312129f4355173dba2bda6b88d8b6cef1d6d83c2ad37d8d0aab17469ba4be85adfd2f5042682cae1b33336
 EBUILD rex-0.46.ebuild 715 SHA256 4d11143d995d5ae9d9dd180fb57548476663aa140b037a84183880226fadf15e SHA512 c18dde654c1d6a9686e6908a61083d7cfd54557c0041bb7c1f12ee8dc5fcd8174a3eef21503202d4eeff5bc05d473fb89c5bb69aaf9d9044a54edba4a113886f WHIRLPOOL c340b3f619842e502c311030a68d9d26c9dac20efd338a82ee58ef558440a5fe8f40150a92ff08c9146a8af9f085458cbead4b7504d82bb32d92a1a257d74aeb
-MISC ChangeLog 2616 SHA256 5878a8fa11d927a86a27e85a5a284f9739fffeaf0f33b68821bbb528dd266427 SHA512 eb91ad8fa352f4eabd3c7f3c10b59aca162742e211519a038d3e008fa4db461ee7d0ed2ee1c2c0b846a27d1e81fee566f294915d32387bb8ec03ca22144e4282 WHIRLPOOL 2d2862a360c98a706e379983a5936a77c513c5ab09c2e42a68f31ed0b26aba9a177377ead79d5984b99c17dee703769cf4d609ef46d6f1b2c8754eb596251f80
+EBUILD rex-0.51.2.ebuild 748 SHA256 e3a4b8e766e825588ba29dcb62eec99719dcf1cdb33bcbf9ecb413594f894f09 SHA512 2da3370ecced70e05a4ee14c30f853faf2fe170497579386b9a7788553d6ff79af34f149ffa6dc83d67329d7fe822dc1d7f006c595cd6b4d70d5e52ab4c3244c WHIRLPOOL 9ad96589e84c2bfe986d6d6e0ddcb810665a264f91ece4550a31063a8603261678a18086fd0326e0d6cd8f27adf48328749710c78eab8c80263d6aa4e467776a
+MISC ChangeLog 2721 SHA256 98599a82a693250159dbf2c6a466e42bf43e8c087ce3feb0ec85465b44cfd86a SHA512 bf6903461d46fb3801a065a4fc12e1c27c3ca07ac0aaf44d6ed3fd9421e4679b20d92f7b948606fd004d9c822f5db4a828a8328c9dd62c3df48c98b7f62d5944 WHIRLPOOL 11f8afbba925075cc58163955dcb55cb416da0e6c549cf163e34b033593c4bb2050e4173abce9547b647ead51d4618d99efb6fcedcb6272d28792d24a1a4b204
 MISC metadata.xml 233 SHA256 65209e280ca6de32a92e1a57301ff69fb3472e55ba07848d6f80405d35e92d47 SHA512 0d30bfb39315a04767e07896409f5d3954f8e954e20fcbac7b92bb9a636c9f61c50b1b2cf55e6c1db9a199a0edc159b5c8cc8f541efb9c4adafa28e3652cff7b WHIRLPOOL 027c5101e1cbc665c9d2ef240f73a874c9f49a9b70175c5947e012df61de484585088a46b6ce9078816e548e6bcc326e7223539cc999159eee2757d0a2eb1480
