@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST w3lib-1.5.tar.gz 9416 SHA256 f611f0a21327aa93af09ef45c04fa87849b697e60157c1fc24bbb90796d290a6 SHA512 a80c0b4a23255843c6724fcab53a296217cd5e61b83d0dd1790a987e477245a1e5f075f0fdc270130faf33bb021f8cae652ac0487c400b8ad574b0ae1e5a23dc WHIRLPOOL 33dc3eedabbb3e08abcd0faf3fa23cebe4994d78a738f5b9f7da558f84aa5af25de7aff5a055e6bd3a83d30ce7b37240bdb0096191b04e4933d9083d05a917d8
 DIST w3lib-1.6.tar.gz 11815 SHA256 9a28d3b796d20b98ae32247937e74755aec8409931ffe2e6a313c408a4808591 SHA512 f9a636e756e1c55273ae7a1c5eabcb62bf0f778c941ddcdb74276bc6d60957a0d86c22c1e5e27e8651e61cf5491abad6c02a7c151f4af861c7e9a7b34345d335 WHIRLPOOL f815197ff7aa812c43401077fabf94b6cc65e86a6432105e1e397d7c0eed4e6d724415c7db9545b5c2bfcf5fe0279a0649ac2978e94cc72307576772bae46bf0
+DIST w3lib-1.8.0.tar.gz 12300 SHA256 b11a5a2e3c1534ebe4a9674cc66912a4df126b650a8db2af892e8bfaf3fefda2 SHA512 7a79e7be4d7ba4987aa13371d1c2b23e85f9b53d2f89eb758eeff9104c4ee0c313fdd31a51c453f97753b901b82d2fcbf9e1c1d950a9c5376d9a06d4b1ef6627 WHIRLPOOL c7eac72d1e565282c5cc12642ac1f42ae50add00dceb56634d85e281f3c8fe9911816250f8509af7ec86660a3e9c9413f8d345a6d7f6ff3c0bcd69f5ef9c81ed
 EBUILD w3lib-1.5.ebuild 496 SHA256 890edf58c52c8a7d6d007421b019387b5f29f1e958aa86c09b1ab2d34eea306f SHA512 f9995f0787dfd950bedfd3e09b87a9043501fa1202dcf99e04704e7a5c9676a4d825e95c8555405c1b8caaa41bc8ab102a995c5347ee7788eb22e5852781af2e WHIRLPOOL a76df54db4f44ea4b319f26d518f71771f0e0030a39a95b160747bd700b3a3b622e9f8ea8a03d046218fb4c9218aa69fe545648c372a5c98b9017b873760b40d
 EBUILD w3lib-1.6.ebuild 594 SHA256 be675d0c9a22908db410b8ba4764320319101878e6aa23808b0d5f6b8e36aa07 SHA512 95af37ab0dbd6409c8720eb30838f985f5d240b875a6baafe057671ec0296469b2dc3b74fe70a433c2834ad57c07fae1b959b1b78076425c81f4ef8b951ae50b WHIRLPOOL 3bb688d6d86f46125c1eaf4c3569c1daee04b989d4f88e03d3254be895f79a88ac502955bc70fe13de479a90109bfd17ac5920f15a3816d915ac8c28866982c3
-MISC ChangeLog 1539 SHA256 041fbc00fca30731abe56e3b83dc9acbe07a5a16f6a0c20b951a57d9429b5e8b SHA512 f45d03c7da0d1495b7d6a15d6187b4e624df92b4b79942d1c747bf4506b6181b61e4890aaaba4037a3164d95641e86837abaa6b836ad890952ee35c396d182f4 WHIRLPOOL 02a98726b06af93e5b917c82eacf86ec15b1cf70f7734c12fed3ccb93f3975db76c6a7c5f1a05e7b694a93cbde1b23c9d3198cb01b81f70e3a4edd3afb382775
+EBUILD w3lib-1.8.0.ebuild 596 SHA256 477b6be675b260af3d7570a42f1bbc72ab924d6e246b8baf4fad1f5a0141097e SHA512 6db88dc5d2189a4a3ef353d9ad0adfa7bd5cec437ddc3c8b0dda97bea12f10a8e2c7db3e32050cd8e5cebe6f3a89ffcd7a456a77b5a1561853294c9f0b22b87b WHIRLPOOL af266ce323f863e90939910d09fe7038e43ac825efcd573abceae5c1682fc11a5d325cc6467061c231a47c6691b6f725940be70f5ac4c977b2d1a9b83177bfa4
+MISC ChangeLog 1645 SHA256 ba4d65d853643b208e6b448bd96961bbd9eb0bf10b397785fac2bfbc32af3ec2 SHA512 10d792aecc63a22a0cde1b326d75a946896c6467bcdec634c42d3a61c3c30482d95cae00456e5525552dd6e6d17135f13270963542c480723a0b808a0de78cbf WHIRLPOOL 05cb59c71bf69c32f0980174ac9500c1b852d2bdb5992bb0e804af887fdb72ef9184904acd87d0cc6e097ea09c0c913a464207671c228d4366b10763411e9608
 MISC metadata.xml 295 SHA256 536aca0e2d3f5ebee738b29f3f1b0660e6bcb2055d4aafbf0e530925abb0c474 SHA512 49a8976e442e5bf458c91e7968d540837e8fc49eebb631232259b3f1a1f0891b35394d0634ffe1c7f49eb8917d40f024d438c62677457b6b5051cba1a56346d7 WHIRLPOOL cc8ca06446b1e0777c2fcdab5dc84cb5f7c55f44f6677fed341a9279882676cd57552cde30c4efaba0881b3669e4a563cdc27942642d325e43ffc79f349bb2cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlOWtakACgkQso7CE7gHKw1N/ACeNof/XzUekDggUeT0Rok+5etB
-HkgAnjr1HHC94pXSJ1R4Dl/IiBi2I9yu
-=jzU9
+iEYEAREIAAYFAlPten8ACgkQso7CE7gHKw18hACg2hCI1OFmexTWQD2+LoPeVmTn
+6PsAn16da90Zw2R80Z3z3+S5TgHq4QhY
+=YhLL
 -----END PGP SIGNATURE-----
