@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=dev-perl/Net-SSH2 dev-perl/JSON-XS dev-perl/XML-Simple dev-perl/Digest-SHA1 dev-perl/Digest-HMAC dev-perl/Expect dev-perl/DBI dev-perl/yaml dev-perl/libwww-perl dev-perl/String-Escape dev-perl/List-MoreUtils dev-perl/Parallel-ForkManager dev-lang/perl:=[-build(-)]
+DESCRIPTION=(R)?ex is a small script to ease the execution of remote commands
+EAPI=5
+HOMEPAGE=http://search.cpan.org/dist/rex/
+KEYWORDS=~amd64 ~x86
+LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
+RDEPEND=dev-perl/Net-SSH2 dev-lang/perl:=[-build(-)]
+SLOT=0
+SRC_URI=https://github.com/RexOps/Rex/archive/0.51.2.tar.gz
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
+_md5_=6b42fbcc381b9e451cc5808162ff2834
