@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/w3lib
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/w3lib/ChangeLog,v 1.9 2014/06/10 07:45:10 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/w3lib/ChangeLog,v 1.10 2014/08/15 03:20:52 idella4 Exp $
+
+*w3lib-1.8.0 (15 Aug 2014)
+
+  15 Aug 2014; Ian Delaney <idella4@gentoo.org> +w3lib-1.8.0.ebuild:
+  bump
 
 *w3lib-1.6 (10 Jun 2014)
 
