@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/rex
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/rex/ChangeLog,v 1.19 2014/08/10 01:37:41 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/rex/ChangeLog,v 1.20 2014/08/15 03:21:03 patrick Exp $
+
+*rex-0.51.2 (15 Aug 2014)
+
+  15 Aug 2014; Patrick Lauer <patrick@gentoo.org> +rex-0.51.2.ebuild:
+  Bump
 
   10 Aug 2014; Patrick Lauer <patrick@gentoo.org> rex-0.45.1.ebuild,
   rex-0.46.ebuild:
